--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>POKE WEB</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="images\pokeball2.png">
+    <script src="./index.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -41,7 +42,6 @@
         </div>
 
         <div id="pokeweb"></div>
-    </div>
-    
+    </div> 
 </body>
 </html>
